# magadh

./: README.md  __init__.py  app.py  app_async.py  pyproject.toml
cli/: send_trade.py  start.py  start_async.sh  update_targets.py
config/: settings.py
events/: trade_events.py
kafka/: async_consumer.py  consumer.py
services/: mock_robinhood_service.py  robinhood_service.py
trade/: async_lifecycle.py  lifecycle.py  price_tracker.py  storage.py
